# rag

./: .gitignore  environment.yml  pyproject.toml
docs/architecture/: system-architecture.md
docs/plans/: 2026-02-24-rag-implementation.md  decision-log.md  operational-readiness-checklist.md  progress-board.md  session-continuity-runbook.md  session-handoff.md
docs/product/: product-requirements.md
docs/tech/: tech-stack.md
example-data/: 数据结构说明.md
example-data/HSIL/刘从琴/: 着色情况.txt
example-data/HSIL/蔡夏香/: 着色情况.txt
example-data/LSIL/包张红/: 着色情况.txt
example-data/LSIL/包怡青/: 着色情况.txt
requirements/: core.txt
src/rag/: __init__.py  cli.py  models.py
src/rag/eval/: __init__.py  dataset_builder.py  gate.py  ragas_runner.py
src/rag/governance/: __init__.py  continuity_rules.py
src/rag/index/: __init__.py  build_index.py  field_index.py  vector_index.py
src/rag/ingest/: __init__.py  (+4 more)
tests/cli/: test_cli_eval.py  test_cli_help.py  test_cli_index_and_ask.py
tests/config/: test_dependency_files.py
tests/continuity/: __init__.py  helpers.py  test_cold_start_three_times.py  test_repo_current_state_passes.py  test_rule_catalog.py  test_runbook_references.py  test_validator_cli_contract.py  test_validator_rules.py
tests/eval/: test_gate_thresholds.py  test_ragas_runner_contract.py
tests/index/: test_build_index.py
tests/ingest/: test_case_parser.py  test_image_caption.py  test_pdf_parser.py  test_txt_parser.py
tests/retrieval/: test_rerank.py  test_retrieve.py
tests/workflow/: test_graph_contract.py
tools/: validate_session_continuity.py
(+18 files in other folders)
